Replace Mode_confirm with mode_confirm_w_other in generic_timeseries notebook. Deprecate the use of display labels like Mode_confirm column in expanded_ct dataframe.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -114,14 +114,14 @@
     "\n",
     "if use_imperial:\n",
     "#     sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
-    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm_w_other','mode_confirm_EI(kWH)','mode_confirm_lb_CO2']\n",
     "else:\n",
     "#     sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
-    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm_w_other','mode_confirm_EI(kWH)','mode_confirm_kg_CO2']\n",
     "\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
-    "elif \"Mode_confirm\" not in expanded_ct.columns:\n",
+    "elif \"mode_confirm_w_other\" not in expanded_ct.columns:\n",
     "    data = expanded_ct[sel_cols_no_label_dep].copy()\n",
     "else:\n",
     "    #add mode confirm related columns if labeled\n",
@@ -149,8 +149,8 @@
     "    labels = await emcu.read_json_resource(\"label-options.default.json\")\n",
     "dic_mode_mapping = scaffolding.mapping_labels(labels, \"MODE\")\n",
     "\n",
-    "if \"Mode_confirm\" in expanded_ct.columns:\n",
-    "    data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))"
+    "if \"mode_confirm_w_other\" in expanded_ct.columns:\n",
+    "    data.mode_confirm_w_other = pd.Categorical(data.mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))"
    ]
   },
   {
@@ -163,23 +163,23 @@
    "source": [
     "def compute_daily_metrics(data, weight_unit, distance_unit):\n",
     "    # Sum daily distance traveled for each mode\n",
-    "    mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[[distance_unit]].sum()\n",
+    "    mode_distance = data.groupby(['user_id','date_time','mode_confirm_w_other'], as_index=False)[[distance_unit]].sum()\n",
     "    mode_distance.rename(columns={'sum':distance_unit}, inplace=True)\n",
     "    mode_distance[distance_unit] = mode_distance[distance_unit].fillna(0)\n",
     "    \n",
     "    # Sum daily emissions for each user\n",
-    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'Mode_confirm_{weight_unit}_CO2', distance_unit]].sum()\n",
-    "    emissions[f'Mode_confirm_{weight_unit}_CO2'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
-    "    emissions[distance_unit] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'mode_confirm_{weight_unit}_CO2', distance_unit]].sum()\n",
+    "    emissions[f'mode_confirm_{weight_unit}_CO2'] = emissions[f'mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    emissions[distance_unit] = emissions[f'mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
     "    \n",
     "    # Sum daily energy for each user\n",
-    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', distance_unit]].sum()\n",
-    "    energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "    energy[distance_unit] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['mode_confirm_EI(kWH)', distance_unit]].sum()\n",
+    "    energy['mode_confirm_EI(kWH)'] = energy['mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    energy[distance_unit] = energy['mode_confirm_EI(kWH)'].fillna(0)\n",
     "    \n",
     "    # Add 7-day rolling avg smoothing to better see trends\n",
-    "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "    mode_distance[f'{distance_unit}_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm_w_other'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    mode_distance[f'{distance_unit}_smooth'] = mode_distance.groupby(['user_id','mode_confirm_w_other'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
     "    emissions[f'{distance_unit}_smooth'] = emissions.groupby(['user_id'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
     "    energy[f'{distance_unit}_smooth'] = energy.groupby(['user_id'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
     "\n",
@@ -190,9 +190,9 @@
     "    active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
     "    active_users.rename(columns={'user_id':'active_users'}, inplace=True)\n",
     "\n",
-    "    if \"Mode_confirm\" in expanded_ct.columns:\n",
+    "    if \"mode_confirm_w_other\" in expanded_ct.columns:\n",
     "        # Count the number of trips for each confirmed mode\n",
-    "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
+    "        mode_counts = data.groupby(['user_id','date_time','mode_confirm_w_other'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "        mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = weight_unit, distance_unit = distance_col)"
    ]
@@ -222,7 +222,7 @@
     "\n",
     "def plot_emission_per_week(emissions, unit, active_users):\n",
     "    # Emissions per week across all users (net impact)\n",
-    "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'Mode_confirm_{unit}_CO2'].agg(['sum'])\n",
+    "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'mode_confirm_{unit}_CO2'].agg(['sum'])\n",
     "    total_sum = plot_data['sum'].sum()\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
@@ -257,7 +257,7 @@
     "\n",
     "try:\n",
     "    # Energy per week across all users (net impact)\n",
-    "    plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
+    "    plot_data = energy.groupby(['date_time'], as_index=False)['mode_confirm_EI(kWH)'].agg(['sum'])\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
@@ -289,7 +289,7 @@
     "def plot_emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth,):\n",
     "    # Emissions per kilometer per day across all users (travel efficiency)\n",
     "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
+    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
     "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'CO2_per_{distance_unit}'].fillna(0)\n",
     "    plot_data = emissions.groupby(['date_time'])[f'CO2_per_{distance_unit}'].agg(['mean']).reset_index()\n",
     "    \n",
@@ -365,19 +365,19 @@
     "    plot_data = plot_data.replace('Taxi/Uber/Lyft', 'Ridehail')\n",
     "    plot_data = plot_data.replace('Pilot ebike', 'E-Bike')\n",
     "\n",
-    "    plot_data = plot_data.groupby(['date_time','Mode_confirm'], as_index=False)['trip_count_smooth'].sum()\n",
+    "    plot_data = plot_data.groupby(['date_time','mode_confirm_w_other'], as_index=False)['trip_count_smooth'].sum()\n",
     "    total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
     "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
     "    plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
     "    # Re-establish categorical variable to not include Other and Non-trips\n",
-    "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
+    "    plot_data = plot_data[~plot_data['mode_confirm_w_other'].isin(['Not a Trip','Other'])]\n",
     "\n",
-    "    plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
+    "    plot_data.mode_confirm_w_other = pd.Categorical(plot_data.mode_confirm_w_other, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Proportion of All Trips'\n",
     "    legend_title = 'Confirmed Mode'\n",
-    "    timeseries_multi_plot(plot_data, 'date_time','trip_proportion','Mode_confirm', plot_title, ylab, legend_title, file_name)\n",
+    "    timeseries_multi_plot(plot_data, 'date_time','trip_proportion','mode_confirm_w_other', plot_title, ylab, legend_title, file_name)\n",
     "    alt_text = store_alt_text_generic('multivariate timeseries', file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
