Replace Replaced_mode with replaced_mode_w_other. Pass values_to_translations_replaced as an additional param to energy_impact and CO2_impact plot creation function in plots.py. Map values_to_translations to the respective replaced mode labels in plots.py for energy_impact and CO2_impact.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -95,7 +95,9 @@
     "                                                                            include_test_users=include_test_users,\n",
     "                                                                            add_footprint=True)\n",
     "\n",
-    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct"
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
+    "\n",
+    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = await scaffolding.translate_values_to_labels(dynamic_labels)"
    ]
   },
   {
@@ -108,7 +110,7 @@
     "if 'mode_confirm' in expanded_ct.columns:\n",
     "    mode_of_interest_df = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\")\n",
     "    debug_df.loc[f\"{mode_of_interest}_trips\"] = len(mode_of_interest_df)\n",
-    "    debug_df.loc[f\"{mode_of_interest}_trips_with_replaced_mode\"] = scaffolding.trip_label_count(\"Replaced_mode\", mode_of_interest_df)"
+    "    debug_df.loc[f\"{mode_of_interest}_trips_with_replaced_mode\"] = scaffolding.trip_label_count(\"replaced_mode_w_other\", mode_of_interest_df)"
    ]
   },
   {
@@ -127,6 +129,7 @@
    "outputs": [],
    "source": [
     "# CASE 2 of https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1256835867\n",
+    "print(expanded_ct)\n",
     "data_eb = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\") if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
    ]
   },
@@ -162,7 +165,7 @@
     "file_name =f'sketch_energy_impact_{mode_of_interest}%s' % file_suffix\n",
     "    \n",
     "try:\n",
-    "    ebei=data_eb.groupby('Replaced_mode').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
+    "    ebei=data_eb.groupby('replaced_mode_w_other').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
     "    ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
     "    ebei= ebei.reset_index()\n",
     "    ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
@@ -170,11 +173,10 @@
     "    net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact(kWH)']), 2)\n",
     "\n",
     "    x = ebei['Sketch of Total Energy_Impact(kWH)']\n",
-    "    y = ebei['Replaced_mode']\n",
+    "    y = ebei['replaced_mode_w_other']\n",
     "    color =ebei['boolean']\n",
-    "\n",
     "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_energy_saved}(kWH)\\n\"+quality_text\n",
-    "    energy_impact(x,y,color,plot_title,file_name)\n",
+    "    energy_impact(x,y,color,plot_title,file_name, values_to_translations_replaced)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -197,7 +199,7 @@
    "outputs": [],
    "source": [
     "def ebco2_compute(data_eb, weight_unit):\n",
-    "    ebco2=data_eb.groupby('Replaced_mode').agg({f'CO2_Impact({weight_unit})': ['sum', 'mean']},)\n",
+    "    ebco2=data_eb.groupby('replaced_mode_w_other').agg({f'CO2_Impact({weight_unit})': ['sum', 'mean']},)\n",
     "    ebco2.columns = [f'total_{weight_unit}_CO2_emissions', f'average_{weight_unit}_CO2_emission']\n",
     "    ebco2 = ebco2.reset_index()\n",
     "    ebco2 = ebco2.sort_values(by=[f'total_{weight_unit}_CO2_emissions'], ascending=False)\n",
@@ -211,13 +213,13 @@
     "    net_CO2_emissions = round(sum(ebco2[f'total_{weight_unit}_CO2_emissions']), 2)\n",
     "    ebco2['boolean'] = ebco2[f'total_{weight_unit}_CO2_emissions'] > 0\n",
     "    x = ebco2[f'total_{weight_unit}_CO2_emissions']\n",
-    "    y = ebco2['Replaced_mode']\n",
+    "    y = ebco2['replaced_mode_w_other']\n",
     "    xLabel = f'CO2 Emissions ({weight_unit})'\n",
     "    yLabel = 'Replaced Mode'\n",
     "    color = ebco2['boolean']\n",
     "\n",
     "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}({weight_unit} CO2 Emissions )\\n\"+quality_text\n",
-    "    CO2_impact(x,y,color,plot_title, xLabel,yLabel,file_name)\n",
+    "    CO2_impact(x,y,color,plot_title, xLabel,yLabel,file_name, values_to_translations_replaced)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
     "\n",
     "    # For debugging: Computing and displaying Total CO2 emissions in both Metric(kg) and Imperial(lb) unit system for easy comparison.\n",
