1. Pass values_to_translations to timeseries_multi_plot() to translation from internal labels to en-translated version from label-options. 2. Change the filter to use internal label instead of Display labels. 3. Pass key of MODE's from label-option as the categorical list. 4. Remove unnecessary mapping.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -137,20 +137,12 @@
     "    \n",
     "if len(expanded_ct_sensed) > 0:\n",
     "    expanded_ct_sensed.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
+    "    \n",
     "    expanded_ct_sensed['date_time'] = pd.to_datetime(expanded_ct_sensed[['year','month','day']])\n",
     "    expanded_ct_sensed = expanded_ct_sensed.drop(columns=['year','month','day'])\n",
     "    # Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
     "    expanded_ct_sensed.user_id = pd.Categorical(expanded_ct_sensed.user_id)\n",
-    "    expanded_ct_sensed.date_time = pd.Categorical(expanded_ct_sensed.date_time)\n",
-    "\n",
-    "if len(dynamic_labels) > 0:\n",
-    "    labels=dynamic_labels\n",
-    "else:\n",
-    "    labels = await emcu.read_json_resource(\"label-options.default.json\")\n",
-    "dic_mode_mapping = scaffolding.mapping_labels(labels, \"MODE\")\n",
-    "\n",
-    "if \"mode_confirm_w_other\" in expanded_ct.columns:\n",
-    "    data.mode_confirm_w_other = pd.Categorical(data.mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))"
+    "    expanded_ct_sensed.date_time = pd.Categorical(expanded_ct_sensed.date_time)"
    ]
   },
   {
@@ -351,6 +343,8 @@
     "plot_title_no_quality = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip)\"'\n",
     "file_name = \"ts_all_modes%s\"%file_suffix\n",
     "\n",
+    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = await scaffolding.translate_values_to_labels(dynamic_labels)\n",
+    "\n",
     "try:\n",
     "    # Plot of mode share proportions across all users\n",
     "    # Consolidate modes\n",
@@ -370,14 +364,13 @@
     "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
     "    plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
     "    # Re-establish categorical variable to not include Other and Non-trips\n",
-    "    plot_data = plot_data[~plot_data['mode_confirm_w_other'].isin(['Not a Trip','Other'])]\n",
-    "\n",
-    "    plot_data.mode_confirm_w_other = pd.Categorical(plot_data.mode_confirm_w_other, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
+    "    plot_data = plot_data[~plot_data['mode_confirm_w_other'].isin(['not_a_trip','other'])]\n",
+    "    plot_data.mode_confirm_w_other = pd.Categorical(plot_data.mode_confirm_w_other, ordered=True, categories=np.unique(list(values_to_translations.keys())))    \n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Proportion of All Trips'\n",
     "    legend_title = 'Confirmed Mode'\n",
-    "    timeseries_multi_plot(plot_data, 'date_time','trip_proportion','mode_confirm_w_other', plot_title, ylab, legend_title, file_name)\n",
+    "    timeseries_multi_plot(plot_data, 'date_time','trip_proportion','mode_confirm_w_other', plot_title, ylab, legend_title, file_name, values_to_translations)\n",
     "    alt_text = store_alt_text_generic('multivariate timeseries', file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -424,7 +417,7 @@
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Trip Count'\n",
     "    legend_title = 'Trip Type'\n",
-    "    timeseries_multi_plot(plot_data, 'date_time','trip_count_smooth','Trip_type', plot_title, ylab, legend_title, file_name)\n",
+    "    timeseries_multi_plot(plot_data, 'date_time','trip_count_smooth','Trip_type', plot_title, ylab, legend_title, file_name, values_to_translations)\n",
     "    alt_text = store_alt_text_generic('multivariate timeseries', file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
