--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -370,19 +370,19 @@
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
+    "    dg=data_eb.groupby('replaced_mode_w_other').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
     "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
     "    dg = dg.reset_index()\n",
     "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False) \n",
     "        \n",
-    "    x='Replaced_mode'\n",
+    "    x='replaced_mode_w_other'\n",
     "    y='Average ('+label_units_lower+')'\n",
     "    y2 = \"Count\"\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.Replaced_mode), file_name, plot_title)\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['replaced_mode_w_other'].dropna().unique().tolist(), file_name, values_to_translations)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.replaced_mode_w_other), file_name, plot_title)\n",
     "\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
