--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -381,7 +381,7 @@
     "    y2 = \"Count\"\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['replaced_mode_w_other'].dropna().unique().tolist(), file_name, values_to_translations)\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['replaced_mode_w_other'].dropna().unique().tolist(), file_name, values_to_translations_replaced)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.replaced_mode_w_other), file_name, plot_title)\n",
     "\n",
     "except:\n",
