Pass x_labels for barplot_mode() to use proper X-axis label

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -379,9 +379,10 @@
     "    x='replaced_mode_w_other'\n",
     "    y='Average ('+label_units_lower+')'\n",
     "    y2 = \"Count\"\n",
+    "    x_label = 'Replaced Mode with Other'\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['replaced_mode_w_other'].dropna().unique().tolist(), file_name, values_to_translations_replaced)\n",
+    "    barplot_mode(data,x,y,x_label,plot_title, expanded_ct['replaced_mode_w_other'].dropna().unique().tolist(), file_name, values_to_translations_replaced)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.replaced_mode_w_other), file_name, plot_title)\n",
     "\n",
     "except:\n",
