--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -526,11 +526,12 @@
     "\n",
     "    x='mode_confirm_w_other'\n",
     "    y='Average ('+label_units_lower+')'\n",
+    "    x_label='Mode Confirm'\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    \n",
     "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['mode_confirm_w_other'].dropna().unique().tolist(), file_name, values_to_translations)\n",
+    "    barplot_mode(data,x,y,x_label,plot_title, expanded_ct['mode_confirm_w_other'].dropna().unique().tolist(), file_name, values_to_translations)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data['mode_confirm_w_other']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
