Fix the typo from relecant to relevant

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -68,7 +68,7 @@
     "if survey_info.get('trip-labels', None) == 'ENKETO':\n",
     "    ipython = get_ipython()\n",
     "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
-    "    raise Exception(\"The plots in this notebook are not relecant for ENKETO trip-labels\")"
+    "    raise Exception(\"The plots in this notebook are not relevant for ENKETO trip-labels\")"
    ]
   },
   {
