updates for compatibility

--- a/viz_scripts/LabelingRates.ipynb
+++ b/viz_scripts/LabelingRates.ipynb
@@ -202,15 +202,13 @@
    "source": [
     "tq = scaffolding.get_time_query(None, None)\n",
     "\n",
-    "all_trips = scaffolding.load_all_participant_trips('usaid-laos-ev', tq, False)\n",
+    "all_trips = await scaffolding.load_all_participant_trips('usaid-laos-ev', tq, False)\n",
     "\n",
-    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = await scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dynamic_labels=dynamic_labels,\n",
-    "                                                                            dic_re=dic_re,\n",
-    "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -429,18 +427,10 @@
     "ylab='Proportion of Trips Labeled'\n",
     "file_name='CanBikeCO_report_user_participation%s'\n",
     "fig, ax = plt.subplots(figsize=(10,4))\n",
-    "sns.barplot(data=plot_data, x='user_id_socio', y='proportion', hue='gender', order=data_order, dodge=False).set(title=plot_title,xlabel='Individual Users (80)',ylabel=ylab,xticklabels=[])\n",
+    "sns.barplot(data=plot_data, x='user_id_socio', y='proportion', hue='gender', order=data_order, dodge=False).set(title=plot_title,xlabel='Individual Users (163)',ylabel=ylab,xticklabels=[])\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(file_name+\".jpg\", bbox_inches='tight')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6e755df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -459,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
