--- a/viz_scripts/MergeDifferentSurveys.ipynb
+++ b/viz_scripts/MergeDifferentSurveys.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_data.to_csv(\"DemographicData.csv\")"
+    "merged_data.to_csv(\"usaid_laos_ev_demographics.csv\")"
    ]
   }
  ],
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
