--- a/viz_scripts/Spatial_viz.ipynb
+++ b/viz_scripts/Spatial_viz.ipynb
@@ -246,16 +246,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = await scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dynamic_labels=dynamic_labels,\n",
-    "                                                                            dic_re=dic_re,\n",
-    "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)\n",
     "tq = scaffolding.get_time_query(year, month)\n",
-    "all_trips = scaffolding.load_all_participant_trips(program, tq, False)\n",
+    "all_trips = await scaffolding.load_all_participant_trips(program, tq, False)\n",
     "\n",
     "# (year, month, program, study_type, dynamic_labels, dic_re, dic_pur=None, include_test_users=False)"
    ]
@@ -877,7 +875,7 @@
    "outputs": [],
    "source": [
     "tq = scaffolding.get_time_query(year, month)\n",
-    "all_trips = scaffolding.load_all_participant_trips('usaid-laos-ev', tq, False)\n",
+    "all_trips = await scaffolding.load_all_participant_trips('usaid-laos-ev', tq, False)\n",
     "\n",
     "all_trips = all_trips[all_trips['start_ts'] > 1700438400]\n",
     "all_trips[\"user_id_str\"] = all_trips.user_id.apply(lambda u: str(u))\n",
@@ -1487,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
