--- a/viz_scripts/mode_purp_charts.ipynb
+++ b/viz_scripts/mode_purp_charts.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a37055d",
+   "id": "f993fa15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,19 @@
     "import scaffolding\n",
     "from uuid import UUID\n",
     "\n",
-    "# %conda install geopandas\n",
-    "\n",
-    "import geopandas as gpd\n",
+    "# %conda install geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a37055d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import geopandas as gpd\n",
     "from collections import defaultdict\n",
-    "import shapely as shp\n",
+    "# import shapely as shp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
@@ -61,7 +69,7 @@
     "plt.rcParams.update(params)\n",
     "\n",
     "\n",
-    "import importlib\n"
+    "import importlib"
    ]
   },
   {
@@ -223,13 +231,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = await scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dynamic_labels=dynamic_labels,\n",
-    "                                                                            dic_re=dic_re,\n",
-    "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -330,6 +336,7 @@
     "\n",
     "plot_data = pd.concat([t1, t2])\n",
     "plot_data = plot_data.reset_index()\n",
+    "plot_data = plot_data.sort_values([\"Gender\", \"Count\"], ascending=False)\n",
     "plot_data = plot_data.drop('index', axis='columns')\n",
     "\n",
     "plot_data"
@@ -437,6 +444,7 @@
     "\n",
     "plot_data = pd.concat([t1, t2])\n",
     "plot_data = plot_data.reset_index()\n",
+    "plot_data = plot_data.sort_values([\"Gender\", \"Count\"], ascending=False)\n",
     "plot_data = plot_data.drop('index', axis='columns')\n",
     "\n",
     "plot_data"
@@ -753,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
