--- a/viz_scripts/Demographics.ipynb
+++ b/viz_scripts/Demographics.ipynb
@@ -117,6 +117,7 @@
    "source": [
     "# Age, Income, Gender\n",
     "plot_data = data.copy()\n",
+    "print(len(plot_data))\n",
     "plot_data = plot_data.groupby(['user_id']).nth(0)[['What_is_your_gender', 'How_old_are_you']].dropna()\n",
     "print(len(plot_data))\n",
     "plot_data = plot_data[plot_data['What_is_your_gender'].isin(['man','woman'])]\n",
@@ -245,43 +246,126 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb6c669",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d26a2941",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_data = data.copy()\n",
-    "print(len(plot_data))\n",
-    "plot_data = plot_data.groupby(['user_id']).nth(0)[['Challenges_to_travel']].dropna()\n",
-    "plot_data = plot_data.groupby(['user_id'], as_index=False).nth(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c07263ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1ee301b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# challenges to travel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49ac6bfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dem_survey_recent = data.copy()\n",
+    "dem_survey_recent = dem_survey_recent.groupby(['user_id']).nth(0)[['What_is_your_gender', 'Challenges_to_travel']].dropna()\n",
+    "print(len(dem_survey_recent)) #recall this is a new question\n",
+    "gender_counts = dem_survey_recent.groupby('What_is_your_gender').count()\n",
+    "gender_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6039a5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gender_challenge = dem_survey_recent[['What_is_your_gender', 'Challenges_to_travel']]\n",
+    "gender_challenge = gender_challenge.dropna(subset=['Challenges_to_travel','What_is_your_gender'])\n",
+    "\n",
+    "challenge_counts = {'man':{}, 'woman':{}}\n",
+    "def count_instances(row):\n",
+    "    if len(row['Challenges_to_travel']) > 0:\n",
+    "        vals = row['Challenges_to_travel'].split(' ')\n",
+    "        for item in vals:\n",
+    "            if item in challenge_counts[row['What_is_your_gender']].keys():\n",
+    "                challenge_counts[row['What_is_your_gender']][item] = challenge_counts[row['What_is_your_gender']][item] + 1\n",
+    "            else:\n",
+    "                challenge_counts[row['What_is_your_gender']][item] = 1\n",
+    "\n",
+    "gender_challenge.apply(lambda x: count_instances(x), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "692b81e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "man_challenge_df = pd.DataFrame.from_dict(challenge_counts['man'], orient='index', columns=['man'])\n",
+    "man_challenge_df.index.names = ['Challenge']\n",
+    "man_challenge_df = man_challenge_df.reset_index()\n",
+    "man_challenge_df['Gender'] = 'Man'\n",
+    "man_challenge_df['proportion'] = man_challenge_df['man'] / np.sum(man_challenge_df['man'])\n",
+    "man_challenge_df = man_challenge_df.rename(columns={\"Challenge\": \"Challenge\", \"man\": \"Count\", \"proportion\":\"Proportion\"})\n",
+    "\n",
+    "woman_challenge_df = pd.DataFrame.from_dict(challenge_counts['woman'], orient='index', columns=['woman'])\n",
+    "woman_challenge_df.index.names = ['Challenge']\n",
+    "woman_challenge_df = woman_challenge_df.reset_index()\n",
+    "woman_challenge_df['Gender'] = 'Woman'\n",
+    "woman_challenge_df['proportion'] = woman_challenge_df['woman'] / np.sum(woman_challenge_df['woman'])\n",
+    "woman_challenge_df = woman_challenge_df.rename(columns={\"Challenge\": \"Challenge\", \"woman\": \"Count\", \"proportion\":\"Proportion\"})\n",
+    "\n",
+    "challenge_df = pd.concat([woman_challenge_df, man_challenge_df])\n",
+    "challenge_df = challenge_df.reset_index()\n",
+    "challenge_df = challenge_df.replace({'Challenge': {\n",
+    "    'high_cost_of_tickets_or_fuel': 'High Cost', \n",
+    "    'lack_of_reliability___timing_or_scheduli': 'Lack of reliability',\n",
+    "    'convenience___lack_of_connectivity_acros': 'Convenience',\n",
+    "    'risk_of_road_accidents___the_roads_are_d': 'Risk of road accidents',\n",
+    "    'personal_safety___often_feel_unsafe_whil': 'Personal safety',\n",
+    "    'none_of_the_above': 'None of the above',\n",
+    "    'access___difficulty_connecting_between_t': 'Access'\n",
+    "    }})\n",
+    "challenge_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17dd42e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width = 0.8\n",
+    "fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "running_total = [0,0]\n",
+    "fig_data = challenge_df.copy()\n",
+    "\n",
+    "for challenge in pd.unique(fig_data.Challenge):\n",
+    "    band_data = fig_data[fig_data['Challenge']==challenge]\n",
+    "    \n",
+    "    labels = band_data['Gender']\n",
+    "    vals = band_data['Proportion']*100\n",
+    "    bar_labels = band_data['Count']\n",
+    "    \n",
+    "    vals_str = [f'{y:.1f} %\\n({x:,})' if y>7 else '' for x, y in zip(bar_labels, vals)]\n",
+    "    bar = ax.barh(labels, vals, width, left=running_total, label=challenge)\n",
+    "    ax.bar_label(bar, label_type='center', labels=vals_str, rotation=90, fontsize=12)\n",
+    "    running_total[0] = running_total[0]+vals.iloc[0]\n",
+    "    running_total[1] = running_total[1]+vals.iloc[1]\n",
+    "\n",
+    "ax.set_title('Challenges for Travel', fontsize=25)\n",
+    "ax.legend(bbox_to_anchor=(1,1), fancybox=True, shadow=True, fontsize=12)\n",
+    "plt.subplots_adjust(bottom=0.20)\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e815ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "challenge_df.groupby('Gender').sum()"
+   ]
   }
  ],
  "metadata": {
