add double box plot

--- a/viz_scripts/mode_purp_charts.ipynb
+++ b/viz_scripts/mode_purp_charts.ipynb
@@ -691,6 +691,7 @@
     "\n",
     "#grouped_data = grouped_data[grouped_data['purpose_confirm']=='work' | grouped_data['purpose_confirm']=='at_work' | grouped_data['purpose_confirm']=='pick_drop_person']\n",
     "grouped_data = grouped_data.query('Mode_confirm==\"Motorcycle\" | Mode_confirm==\"Walk\" | Mode_confirm==\"Car Drove Alone\" | Mode_confirm==\"Car Shared Ride\"')\n",
+    "men_mode = grouped_data.copy()\n",
     "\n",
     "# Plotting the box and whisker plot\n",
     "fig, ax = plt.subplots(figsize=(10,8))\n",
@@ -731,6 +732,7 @@
     "\n",
     "#grouped_data = grouped_data[grouped_data['purpose_confirm']=='work' | grouped_data['purpose_confirm']=='at_work' | grouped_data['purpose_confirm']=='pick_drop_person']\n",
     "grouped_data = grouped_data.query('Mode_confirm==\"Motorcycle\" | Mode_confirm==\"Walk\" | Mode_confirm==\"Car Drove Alone\" | Mode_confirm==\"Car Shared Ride\"')\n",
+    "women_mode = grouped_data.copy()\n",
     "\n",
     "# Plotting the box and whisker plot\n",
     "fig, ax = plt.subplots(figsize=(10,8))\n",
@@ -741,8 +743,36 @@
     "plt.subplots_adjust(bottom=0.25)\n",
     "plt.xticks(rotation=35, ha='right')\n",
     "plt.legend([])\n",
-    "print(grouped_data['user_id'].nunique(), \"men\")"
+    "print(grouped_data['user_id'].nunique(), \"women\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d79d0380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combined box plot\n",
+    "men_mode[\"gender\"] = \"Man\"\n",
+    "women_mode[\"gender\"] = \"Woman\"\n",
+    "combined_mode = pd.concat([men_mode, women_mode])\n",
+    "combined_mode.head()\n",
+    "plot_title = 'Percentage of Mode Choice for Each User'\n",
+    "ylab = 'Percentage of trips'\n",
+    "sns.boxplot(x=\"Mode_confirm\", y=\"percentage\",\n",
+    "            hue=\"gender\", palette=[\"m\", \"g\"],\n",
+    "            data=combined_mode, showfliers=False).set(title=plot_title, xlabel='', ylabel=ylab)\n",
+    "sns.despine(offset=10, trim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cbc5b21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
