Remove await and dynamic_labels from scaffolding.translate_values_to_labels(labels). Removed merged conflict issue remanant.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -344,7 +344,7 @@
     "plot_title_no_quality = 'Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip)\"'\n",
     "file_name = \"ts_all_modes%s\"%file_suffix\n",
     "\n",
-    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = await scaffolding.translate_values_to_labels(dynamic_labels)\n",
+    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)\n",
     "\n",
     "try:\n",
     "    # Plot of mode share proportions across all users\n",
